# pve-pci-fixer

./: Cargo.toml  README.md  README_EN.md  config.yml  install.sh  lspci.txt  lspci2.txt
src/: index.html  main.rs  test.rs
